modules/tests/_kubernetes-policy/fixtures/edge-identity/gateway-controller-config-images-unpinned/resources.yaml
apiVersion: v1
data:
  envoy-gateway.yaml: "envoyProxy:\n  provider:\n    kubernetes:\n      envoyDeployment:\n\
    \        container:\n          image: docker.io/envoyproxy/envoy:latest\nprovider:\n\
    \  kubernetes:\n    shutdownManager:\n      image: docker.io/envoyproxy/gateway:latest\n"
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/version: v1.9.1
    helm.sh/chart: gateway-helm-1.9.1
  name: envoy-gateway-config
  namespace: gateway
